--- a/src/app/itcss/_5_objects.viewer-audio.styl
+++ b/src/app/itcss/_5_objects.viewer-audio.styl
@@ -39,8 +39,8 @@
 		overflow: hidden
 
 		display: grid
-		grid-template-rows: minmax(8px, 1fr) auto minmax(8px, 1fr)
-		grid-template-columns: minmax(8px, 1fr) auto minmax(8px, 1fr)
+		grid-template-rows: 1fr auto 1fr
+		grid-template-columns: 12px auto 12px
 
 		background-color: var(--background)
 		background-image:
@@ -52,5 +52,9 @@
 	&-aud
 		grid-area: 2 / 2
 		overflow hidden
-		width: 600px
-		max-width: 100%
+		place-self: center
+
+		@media (max-width: 600px + 24px - 1px)
+			width: 100%
+		@media (min-width: 600px + 24px)
+			width: 600px
